Solución pequeños errores (links, image sizes...)

--- a/Fluidos/fluidos-3.html
+++ b/Fluidos/fluidos-3.html
@@ -16,35 +16,38 @@
     <h1 class="title">EJERCICIOS DE PRESIÓN</h1>
   </div>
 
-  <br><br><br>
-
+ 
+  <a href="https://cursos-0-fc-ugr.github.io/Fisica/">Volver a la página principal de Física</a><br><br>
   <a href="fluidos_teoría.html">Volver a teoría</a>
 
-  <br><br>
+  
 
 <ol>
-<li><article style="background-color:lightred;border-color:red"><strong>En la siguiente figura, la presión atmosférica es <span class="math inline">\(P_{atm}\)</span>=0.8 atm. Calcule la altura que ascenderá el mercurio en un barómetro.</strong>
+
+<li><article style="background-color:lightred;border-color:red">
+  <strong><p>En la siguiente figura, la presión atmosférica es <span class="math inline">\(P_{atm}\)</span>=0.8 atm. Calcule la altura que ascenderá el mercurio en un barómetro.<br /></strong>
+   
+    <div class="sbsimage">
+        <div class="imgContainerEnd">
+          <a data-fancybox="" href="figuras/prob3-barometro-esquema.png">
+          <img alt="" src="figuras/prob3-barometro-esquema.png" width="25%"/>
+        </a>
+        </div>
+    </div>
+
 <button id="e1" class="button"  onclick="show2('e1');">Solución</button>
   <div id="sol-e1" style="display:none;">
     <p>SOLUCIÓN: <br />
-Si hacemos un esquema:</p>
 
-<div class="sbsimage">
-    <div class="imgContainerEnd">
-      <a data-fancybox="" href="figuras/prob3-barometro-esquema.png">
-      <img alt="" src="figuras/prob3-barometro-esquema.png" width="30%"/>
-    </a>
-    </div>
-</div>
+<p>En A’: <span class="math inline">\(P(A&#39;)=0.8 \text{ atm}=0.8\cdot 101300 \text{ Pa/atm}=81040 \text{ Pa}\)</span>. Como A y A’ están a la misma altura, la presión es la misma. Por otro lado, la presión en B es 0, ya que no hay ningún fluido encima. Por lo tanto: <span class="math display">\[P(A&#39;)=P_B+dgH=dgH\]</span> Como el fluido es mercurio, <span class="math inline">\(d=13500 \text{ kg/m}^3\)</span>. Despejando <span class="math inline">\(H\)</span>: <span class="math display">\[H=\frac{P(A&#39;)}{dg}=\frac{81040\mbox{ Pa}}{13600\mbox{ kg/m}^3\cdot 9.8\mbox{ m/s}^2}=0.608\mbox{ m}\]</span> El mercurio asciende 608 mm por la columna.</p></article></li>
 
-<p>En A’: <span class="math inline">\(P(A&#39;)=\)</span> 0.8 atm=<span class="math inline">\(0.8\times 101300\)</span> Pa/atm=81040 Pa. Como A y A’ están a la misma altura, la presión es la misma. Por otro lado, la presión en B es 0, ya que no hay ningún fluido encima. Por lo tanto: <span class="math display">\[P(A&#39;)=P_B+dgH=dgH\]</span> Como el fluido es mercurio, <span class="math inline">\(d=13500\)</span> kg/m<span class="math inline">\(^3\)</span>. Despejando <span class="math inline">\(H\)</span>: <span class="math display">\[H=\frac{P(A&#39;)}{dg}=\frac{81040\mbox{ Pa}}{13600\mbox{ jg/m}^3\times 9.8\mbox{ m/s}^2}=0.608\mbox{ m}\]</span> El mercurio asciende 608 mm por la columna.</p></article></li>
 <li><article style="background-color:lightred;border-color:red">
-  <strong>A partir de la siguiente figura, calcule la presión atmosférica. Exprese el resultado en torr.</strong>
+  <strong><p>A partir de la siguiente figura, calcule la presión atmosférica. Exprese el resultado en torr.<br /></strong>
 
   <div class="sbsimage">
       <div class="imgContainerEnd">
         <a data-fancybox="" href="figuras/prob3-barometro-2.png">
-        <img alt="" src="figuras/prob3-barometro-2.png" width="30%"/>
+        <img alt="" src="figuras/prob3-barometro-2.png" width="25%"/>
       </a>
       </div>
   </div>
@@ -52,27 +55,30 @@ Si hacemos un esquema:</p>
 <button id="e2" class="button"  onclick="show2('e2');">Solución</button>
   <div id="sol-e2" style="display:none;">
     <p>SOLUCIÓN: <br />
-Dado que me lo piden en torr, por definición, esto es justamente la altura en mm de la columna de mercurio, es decir: <span class="math display">\[P_{atm}=810\mbox{ torr}\]</span> Lo podemos comprobar así: hacemos un esquema similar al ejercicio anterior. Entonces: <span class="math display">\[P_{atm}=P(A)=P_B+dgH=dgH\]</span> <span class="math display">\[P_{atm}=13600\mbox{ kg/m}^3\times 9.8\mbox{ m/s}^2\times 0.81\mbox{ m}=107957\mbox{ Pa}\]</span> Y pasando a torr: <span class="math display">\[P_{atm}=107957\mbox{ Pa}\times \frac{101300\mbox{ Pa}}{760\mbox{ torr}}=810\mbox{ torr}\]</span></p></article></li>
-<li><article style="background-color:lightred;border-color:red"><p>La presión atmosférica en un punto dado son 980 mbar. Exprese este valor en atm, Pa, torr y dinas/cm<span class="math inline">\(^2\)</span>.</p>
+Dado que me lo piden en torr, por definición, esto es justamente la altura en mm de la columna de mercurio, es decir: <span class="math display">\[P_{atm}=810\mbox{ torr}\]</span> Lo podemos comprobar así: hacemos un esquema similar al ejercicio anterior. Entonces: <span class="math display">\[P_{atm}=P(A)=P_B+dgH=dgH\]</span> <span class="math display">\[P_{atm}=13600\mbox{ kg/m}^3\cdot 9.8\mbox{ m/s}^2\cdot 0.81\mbox{ m}=107957\mbox{ Pa}\]</span> Y pasando a torr: <span class="math display">\[P_{atm}=107957\mbox{ Pa}\cdot \frac{101300\mbox{ Pa}}{760\mbox{ torr}}=810\mbox{ torr}\]</span></p></article></li>
+
+<li><article style="background-color:lightred;border-color:red">
+    <strong><p>La presión atmosférica en un punto dado son 980 mbar. Exprese este valor en atm, Pa, torr y dinas/cm<span class="math inline">\(^2\)</span>.<br /></strong>
 <button id="e3" class="button"  onclick="show2('e3');">Solución</button>
   <div id="sol-e3" style="display:none;">
     <p>SOLUCIÓN: <br />
 1 mbar = 100 Pa, entonces<br />
-<br><center><span class="math inline">\(P=980\)</span> mbar <span class="math inline">\(\times 100\)</span> Pa/mbar <span class="math inline">\(=0.98\times 10^5\)</span> Pa.<br /></center>
+<br><center><span class="math inline">\(P=980\)</span> mbar <span class="math inline">\(\cdot 100\)</span> Pa/mbar <span class="math inline">\(=0.98\cdot 10^5\)</span> Pa.<br /></center>
 1 atm = 101300 Pa/atm, entonces<br />
-<br><center><span class="math inline">\(P=0.98\times 10^5\)</span> Pa<span class="math inline">\(\times\frac{1}{101300}\)</span> atm/Pa<span class="math inline">\(=0.97\)</span> atm.<br /></center>
+<br><center><span class="math inline">\(P=0.98\cdot 10^5\)</span> Pa<span class="math inline">\(\cdot\frac{1}{101300}\)</span> atm/Pa<span class="math inline">\(=0.97\)</span> atm.<br /></center>
 1 atm = 760 torr/atm, entonces<br />
-<br><center><span class="math inline">\(P=0.97\)</span> atm<span class="math inline">\(\times 760\)</span> torr/atm<span class="math inline">\(=735\)</span> torr.<br /></center>
+<br><center><span class="math inline">\(P=0.97\)</span> atm<span class="math inline">\(\cdot 760\)</span> torr/atm<span class="math inline">\(=735\)</span> torr.<br /></center>
 1 Pa = 10 dinas/cm<span class="math inline">\(^2\)</span>, entonces<br />
-<br><center><span class="math inline">\(P=0.98\times 10^5\)</span> Pa<span class="math inline">\(\times 10\frac{\mbox{dinas/cm}^2}{\mbox{Pa}}=0.98\times 10^6\)</span> dinas/cm<span class="math inline">\(^2\)</span>.<br /></center>
+<br><center><span class="math inline">\(P=0.98\cdot 10^5\)</span> Pa<span class="math inline">\(\cdot 10\frac{\mbox{dinas/cm}^2}{\mbox{Pa}}=0.98\cdot 10^6\)</span> dinas/cm<span class="math inline">\(^2\)</span>.<br /></center>
 </p></article></li>
+
 <li><article style="background-color:lightred;border-color:red">
-  <strong>El tanque de la figura lleva adosado un tubo por el que asciende el fluido. El líquido es agua. a) Calcular la presión en el fondo. b) ¿Cuál será la altura del agua en el tanque?</strong>
+    <strong><p>El tanque de la figura lleva adosado un tubo por el que asciende el fluido. El líquido es agua. a) Calcular la presión en el fondo. b) ¿Cuál será la altura del agua en el tanque?<br /></strong>
 
   <div class="sbsimage">
       <div class="imgContainerEnd">
         <a data-fancybox="" href="figuras/prob3-tanque_abierto.png">
-        <img alt="" src="figuras/prob3-tanque_abierto.png" width="40%"/>
+        <img alt="" src="figuras/prob3-tanque_abierto.png" width="25%"/>
       </a>
       </div>
   </div>
@@ -82,15 +88,17 @@ Dado que me lo piden en torr, por definición, esto es justamente la altura en m
     <p>SOLUCIÓN: <br />
 </p>
 <ol>
-<li ><p>Para ello aplicamos la ecuación de la hidrostática: <span class="math display">\[P=P_0+dgh\]</span> siendo <span class="math inline">\(P_0\)</span> la presión en la superficie libre del tubo. Como el tubo está abierto, <span class="math inline">\(P_0=P_{atm}=101300\)</span> Pa. Por lo tanto: <span class="math display">\[P=101300\mbox{ Pa}+1000\mbox{ kg/m}^3\times 9.8\mbox{ m/s}^2\times 1.5\mbox{ m}=116000\mbox{ Pa}\]</span></p></li >
-<li ><p>Dado que la presión no depende A una misma altura, la presión ha de ser la misma, tanto en el tanque como en el tubo. En particular esto es así en la superficie libre, donde tendremos la presión atmosférica, tanto en el tanque como en el tubo. Por lo que la superficie libre ha de estar en la misma altura: 1. 5 m.</p></li >
+<li ><p>Para ello aplicamos la ecuación de la hidrostática: <span class="math display">\[P=P_0+dgh\]</span> siendo <span class="math inline">\(P_0\)</span> la presión en la superficie libre del tubo. Como el tubo está abierto, <span class="math inline">\(P_0=P_{atm}=101300 \text{ Pa}\)</span>. Por lo tanto: <span class="math display">\[P=101300\mbox{ Pa}+1000\mbox{ kg/m}^3\cdot 9.8\mbox{ m/s}^2\cdot 1.5\mbox{ m}=116000\mbox{ Pa}\]</span></p></li >
+<li ><p>Dado que la presión no depende A una misma altura, la presión ha de ser la misma, tanto en el tanque como en el tubo. En particular esto es así en la superficie libre, donde tendremos la presión atmosférica, tanto en el tanque como en el tubo. Por lo que la superficie libre ha de estar en la misma altura: 1.5 m.</p></li >
 </ol></article></li>
-<li><article style="background-color:lightred;border-color:red"><strong>¿Y si en vez del tanque tengo un recipiente como el de las siguientes figuras? ¿Cambia la presión?</strong>
+
+<li><article style="background-color:lightred;border-color:red">
+    <strong><p>¿Y si en vez del tanque tengo un recipiente como el de las siguientes figuras? ¿Cambia la presión?<br /></strong>
 
   <div class="sbsimage">
       <div class="imgContainerEnd">
         <a data-fancybox="" href="figuras/prob3-tanques-formas.png">
-        <img alt="" src="figuras/prob3-tanques-formas.png" width="40%"/>
+        <img alt="" src="figuras/prob3-tanques-formas.png" width="25%"/>
       </a>
       </div>
   </div>
@@ -98,12 +106,13 @@ Dado que me lo piden en torr, por definición, esto es justamente la altura en m
   <button id="e5" class="button"  onclick="show2('e5');">Solución</button>
     <div id="sol-e5" style="display:none;">
 <p>SOLUCIÓN: <br> La presión varía sólo con la altura, independientemente de la forma del recipiente. Por tanto, la altura ha de ser siempre la misma.</p></article></li>
-<li><article style="background-color:lightred;border-color:red"><strong>Ahora el tanque está cerrado. Esto quiere decir que no está en contacto con la atmósfera. En las condiciones del dibujo, calcula la presión en la superficie libre del tanque (punto A).</strong>
+<li><article style="background-color:lightred;border-color:red">
+    <strong><p>Ahora el tanque está cerrado. Esto quiere decir que no está en contacto con la atmósfera. En las condiciones del dibujo, calcula la presión en la superficie libre del tanque (punto A).<br /></strong>
 
   <div class="sbsimage">
       <div class="imgContainerEnd">
         <a data-fancybox="" href="figuras/prob3-tanque_cerrado.png">
-        <img alt="" src="figuras/prob3-tanque_cerrado.png" width="40%"/>
+        <img alt="" src="figuras/prob3-tanque_cerrado.png" width="25%"/>
       </a>
       </div>
   </div>
@@ -116,13 +125,14 @@ Para encontrar la solución, buscamos un punto donde conozcamos la presión. Com
 <div class="sbsimage">
     <div class="imgContainerEnd">
       <a data-fancybox="" href="figuras/prob3-tanque_cerrado-sol.png">
-      <img alt="" src="figuras/prob3-tanque_cerrado-sol.png" width="40%"/>
+      <img alt="" src="figuras/prob3-tanque_cerrado-sol.png" width="25%"/>
     </a>
     </div>
 </div>
 
-<p>Y como la presión sólo depende de la diferencia de altura: <span class="math display">\[P_A=P_0+dgH=101300\mbox{ Pa}+1000\mbox{ kg/m}^3\times 9.8\mbox{ m/s}^2\times 1\mbox{ m}=111100\mbox{ Pa}\]</span></p></article></li>
-<li><article style="background-color:lightred;border-color:red"><strong>De las siguientes figuras, indica cuáles son imposibles y explica la razón.</strong>
+<p>Y como la presión sólo depende de la diferencia de altura: <span class="math display">\[P_A=P_0+dgH=101300\mbox{ Pa}+1000\mbox{ kg/m}^3\cdot 9.8\mbox{ m/s}^2\cdot 1\mbox{ m}=111100\mbox{ Pa}\]</span></p></article></li>
+<li><article style="background-color:lightred;border-color:red">
+    <strong><p>De las siguientes figuras, indica cuáles son imposibles y explica la razón.<br /></strong>
 
   <div class="sbsimage">
       <div class="imgContainerEnd">
@@ -143,9 +153,10 @@ E: No es posible. Da igual dónde esté conectado el tubo. Siempre que los líqu
 F: Sí es posible. La superficie libre está a la misma altura, como se corresponde con el hecho de que la presión es la misma.</p></article></li>
 </ol>
 
-<br><br><br>
 
-<a href="fluidos_teoría.html">Volver a teoría</a>
+
+<a href="fluidos_teoría.html">Volver a teoría</a><br><br>
+<a href="https://cursos-0-fc-ugr.github.io/Fisica/">Volver a la página principal de Física</a>
 
 <br><br>
 
