--- a/Fluidos/fluidos_teoría.html
+++ b/Fluidos/fluidos_teoría.html
@@ -16,6 +16,8 @@
     <h1 class="title">Fluidos</h1>
   </div>
 
+  <a href="https://cursos-0-fc-ugr.github.io/Fisica/">Volver a la página principal de Física</a>
+
   <section>
 
     <header>
@@ -45,7 +47,7 @@
 <p>La densidad es una propiedad de la materia, y su valor depende del tipo pero también del estado de agregación en el que se encuentre. Por ejemplo, el agua posee una densidad mayor que el hielo, hecho por el cual el hielo flota en el agua. Esto es una excepción importante, ya que en general los sólidos poseen una densidad mayor que los líquidos y que los gases.</p>
 
 <article style="background-color:lightblue;border-color:blue">
-  <strong>EJEMPLO: Si pesamos un lingote de oro como el de la siguiente gura, encontraremos que su masa es 12.4 kg.</strong>
+  <strong>EJEMPLO: Si pesamos un lingote de oro como el de la siguiente figura, encontraremos que su masa es 12.4 kg.</strong>
 
   <div class="sbsimage">
       <div class="imgContainerEnd">
@@ -373,11 +375,6 @@ no de su altura.
 
 </section>
 
-<br><br><br>
-
-<a href="fluidos-2.html">Ejercicios de fuerza y presión</a>
-
-<br><br>
 
 <section>
 
@@ -433,6 +430,12 @@ punto.</strong>
 
   </div>
 </article>
+
+<br><br><br>
+
+<a href="fluidos-2.html">Ejercicios de fuerza y presión</a>
+
+<br><br>
 
 </section>
 
@@ -690,7 +693,8 @@ cm<span class="math inline">\(^3\)</span>, sumergido en un alcohol etílico (d=7
 
   <br><br>
 
-  <a href="fluidos-4.html">Ejercicios de Principio de Arquímedes y principio de Pascal</a>
+  <a href="fluidos-4.html">Ejercicios de Principio de Arquímedes y principio de Pascal</a><br><br>
+  <a href="https://cursos-0-fc-ugr.github.io/Fisica/">Volver a la página principal de Física</a>
 
   <br><br>
 <script type="text/javascript" language="javascript">
