--- a/Oscilaciones/oscilaciones-1.html
+++ b/Oscilaciones/oscilaciones-1.html
@@ -17,13 +17,14 @@
     <h1 class="title">EJERCICIOS DE VIBRACIONES</h1>
   </div>
 
+  <a href="https://cursos-0-fc-ugr.github.io/Fisica/">Volver a la página principal de Física</a><br><br>
   <a href="oscilaciones_teoría.html">Volver a teoría</a>
 
 <ol type="1">
 
 <li><article style="background-color:lightred;border-color:red">
 
-<p>Un M.A.S. viene descrito por la siguiente ecuación: <span class="math inline">\(x(t)=3\mbox{ m}\sin\left(2\pi 1000 t+\pi/2\right)\)</span>. Calcule el periodo, la frecuencia, la frecuencia angular y la amplitud del movimiento.</p>
+    <strong><p>Un M.A.S. viene descrito por la siguiente ecuación: <span class="math inline">\(x(t)=3\sin\left(2\pi 1000 t+\pi/2\right)\mbox{ m}\)</span>. Calcule el periodo, la frecuencia, la frecuencia angular y la amplitud del movimiento.<br /></strong>
 
 <button id="e1" class="button"  onclick="show2('e1');">Solución</button>
 <div id="sol-e1" style="display:none;">
@@ -31,7 +32,7 @@
 <p>SOLUCIÓN:<br />
 Dado que la forma general de un M.A.S. es <span class="math display">\[x(t)=A\sin\left(\omega t+\varphi_0\right)\]</span> comparando, vemos que lo que acompaña al tiempo es la frecuencia angular: <span class="math display">\[\boxed{\omega=2000\pi\mbox{ rad/s}}\]</span> Frecuencia: Dado que <span class="math inline">\(\omega=2\pi f\)</span>, comparando tenemos que .<br />
 Periodo: Puesto que <span class="math inline">\(T=1/f\)</span>, entonces <span class="math inline">\(T=\frac{1}{1000\mbox{ Hz}}=\boxed{0.001\mbox{ s}}\)</span><br />
-Amplitud: Es el factor que acompaña a la función seno o coseno. Por tanto, .</p>
+Amplitud: es el factor que acompaña a la función seno o coseno. Por tanto, .</p>
 </div>
 </article></li>
 
@@ -39,7 +40,7 @@ Amplitud: Es el factor que acompaña a la función seno o coseno. Por tanto, .</
 
 <li><article style="background-color:lightred;border-color:red">
 
-  <p>Un M.A.S. viene descrito por la siguiente ecuación: <span class="math inline">\(x(t)=2.5\mbox{ m}\cos\left(800 t+\pi/2\right)\)</span>. Calcule el periodo, la frecuencia, la frecuencia angular y la amplitud del movimiento.</p>
+    <strong><p>Un M.A.S. viene descrito por la siguiente ecuación: <span class="math inline">\(x(t)=2.5\cos\left(800 t+\pi/2\right)\mbox{ m}\)</span>. Calcule el periodo, la frecuencia, la frecuencia angular y la amplitud del movimiento.<br /></strong>
 
   <button id="e2" class="button"  onclick="show2('e2');">Solución</button>
   <div id="sol-e2" style="display:none;">
@@ -55,7 +56,7 @@ Amplitud: Es el factor que acompaña a la función seno o coseno. Por tanto,<br 
 <li><article style="background-color:lightred;border-color:red">
 
 
-  <p>Un M.A.S. viene descrito por la siguiente ecuación: <span class="math inline">\(x(t)=82\mbox{ m}\cos\left(\frac{2\pi}{2.5} t+\pi/2\right)\)</span>. Calcule el periodo, la frecuencia, la frecuencia angular y la fase inicial del movimiento.</p>
+    <strong><p>Un M.A.S. viene descrito por la siguiente ecuación: <span class="math inline">\(x(t)=82\cos\left(\frac{2\pi}{2.5} t+\pi/2\right)\mbox{ m}\)</span>. Calcule el periodo, la frecuencia, la frecuencia angular y la fase inicial del movimiento.<br /></strong>
 
   <button id="e3" class="button"  onclick="show2('e3');">Solución</button>
   <div id="sol-e3" style="display:none;">
@@ -70,7 +71,7 @@ Fase inicial: <span class="math inline">\(\boxed{\varphi_0=\pi/2\mbox{ rad}}\)</
 
 <li><article style="background-color:lightred;border-color:red">
 
-  <p>Una partícula describe un M.A.S. con una amplitud de 3 m y una frecuencia de 25 Hz. En el instante inicial, la partícula se encuentra en <span class="math inline">\(x=2\)</span> m. Calcular la fase inicial y la posición en el instante <span class="math inline">\(t=3\)</span> s.</p>
+    <strong><p>Una partícula describe un M.A.S. con una amplitud de 3 m y una frecuencia de 25 Hz. En el instante inicial, la partícula se encuentra en <span class="math inline">\(x=2 \text{ m}\)</span>. Calcular la fase inicial y la posición en el instante <span class="math inline">\(t=3 \text{ s}\)</span>.<br /></strong>
 
   <button id="e4" class="button"  onclick="show2('e4');">Solución</button>
   <div id="sol-e4" style="display:none;">
@@ -78,16 +79,16 @@ Fase inicial: <span class="math inline">\(\boxed{\varphi_0=\pi/2\mbox{ rad}}\)</
 </p>
 <ul>
 <li><p>Fase inicial:<br />
-Describimos el movimiento mediante la función <span class="math display">\[x(t)=A\sin\left(\omega t+\varphi_0\right)\]</span> siendo <span class="math inline">\(A=3\)</span> m, y <span class="math display">\[\omega=2\pi f=50\pi\]</span> En el instante inicial <span class="math inline">\(t=0\)</span>, nos dan <span class="math inline">\(x(0)=2\)</span> m. Según la ecuación anterior, tendremos <span class="math display">\[x(0)=A\sin\left(0+\varphi_0\right)\]</span> siendo <span class="math inline">\(x(0)=2\)</span> m, entonces: <span class="math display">\[\varphi_0=\arcsin\bigl(\frac{x(0)}{A}\bigr)\]</span> Sustituyendo valores: <span class="math display">\[\varphi_0=\arcsin\bigl(\frac{2}{3}\bigr)=\boxed{0.73\mbox{ rad}}\]</span> Finalmente, tendremos que la posición viene determinada por la ecuación: <span class="math display">\[x(t)=3\mbox {m}\sin\left(50\pi t+0.73\right)\]</span></p></li>
-<li><p>Posición en el instante <span class="math inline">\(t=3\)</span> s:<br />
-Podemos sustituir <span class="math inline">\(t=3\)</span> s en la ecuación anterior, o bien tener en cuenta que <span class="math inline">\(f\)</span> es la frecuencia, es decir, el número de ciclos por segundo. En 3s se ejecutan <span class="math inline">\(N=ft=25\times 3=75\)</span> ciclos completos. Por tanto,la posición es la misma que la posición inicial: <span class="math display">\[\boxed{x(3\mbox{ s})=2\mbox{ m}}\]</span></p></li>
+Describimos el movimiento mediante la función <span class="math display">\[x(t)=A\sin\left(\omega t+\varphi_0\right)\]</span> siendo <span class="math inline">\(A=3 \text{ m}\)</span>, y <span class="math display">\[\omega=2\pi f=50\pi \mbox{ rad/s}\]</span> En el instante inicial <span class="math inline">\(t=0\)</span>, nos dan <span class="math inline">\(x(0)=2 \text{ m}\)</span>. Según la ecuación anterior, tendremos <span class="math display">\[x(0)=A\sin\left(0+\varphi_0\right)\]</span> siendo <span class="math inline">\(x(0)=2 \text{ m}\)</span>, entonces: <span class="math display">\[\varphi_0=\arcsin\bigl(\frac{x(0)}{A}\bigr)\]</span> Sustituyendo valores: <span class="math display">\[\varphi_0=\arcsin\bigl(\frac{2}{3}\bigr)=\boxed{0.73\mbox{ rad}}\]</span> Finalmente, tendremos que la posición viene determinada por la ecuación: <span class="math display">\[x(t)=3\sin\left(50\pi t+0.73\right) \mbox { m}\]</span></p></li>
+<li><p>Posición en el instante <span class="math inline">\(t=3 \text{ s}\)</span>:<br />
+Podemos sustituir <span class="math inline">\(t=3 \text{ s}\)</span> en la ecuación anterior, o bien tener en cuenta que <span class="math inline">\(f\)</span> es la frecuencia, es decir, el número de ciclos por segundo. En 3 s se ejecutan <span class="math inline">\(N=ft=25\cdot 3=75\)</span> ciclos completos. Por tanto, la posición es la misma que la posición inicial: <span class="math display">\[\boxed{x(3\mbox{ s})=2\mbox{ m}}\]</span></p></li>
 </ul>
 </div>
 </article></li>
 
 <li><article style="background-color:lightred;border-color:red">
 
-<p>Una partícula describe un M.A.S. con una amplitud de 3 m y una frecuencia de 0.25 Hz. En el instante inicial, la partícula se encuentra en el origen <span class="math inline">\(x=0\)</span> y con velocidad positiva. Calcular la posición en el instante <span class="math inline">\(t=3\)</span> s. Repetir el cálculo para el caso en el que la velocidad inical sea negativa.</p>
+<strong><p>Una partícula describe un M.A.S. con una amplitud de 3 m y una frecuencia de 0.25 Hz. En el instante inicial, la partícula se encuentra en el origen <span class="math inline">\(x=0\)</span> y con velocidad positiva. Calcular la posición en el instante <span class="math inline">\(t=3 \text{ s}\)</span>. Repetir el cálculo para el caso en el que la velocidad inical sea negativa.<br /></strong>
 
 <button id="e5" class="button"  onclick="show2('e5');">Solución</button>
 <div id="sol-e5" style="display:none;">
@@ -98,7 +99,7 @@ La siguiente figura muestra la posición en función del tiempo. En el instante 
 <div class="sbsimage">
     <div class="imgContainerEnd">
       <a data-fancybox="" href="figuras/prob1-xMAS.png">
-      <img alt="" src="figuras/prob1-xMAS.png" width="60%"/>
+      <img alt="" src="figuras/prob1-xMAS.png" width="30%"/>
     </a>
     </div>
 </div>
@@ -108,7 +109,7 @@ La siguiente figura muestra la posición en función del tiempo. En el instante 
 <div class="sbsimage">
     <div class="imgContainerEnd">
       <a data-fancybox="" href="figuras/prob1-graph-vneg.png">
-      <img alt="" src="figuras/prob1-graph-vneg.png" width="60%"/>
+      <img alt="" src="figuras/prob1-graph-vneg.png" width="30%"/>
     </a>
     </div>
 </div>
@@ -118,7 +119,7 @@ La siguiente figura muestra la posición en función del tiempo. En el instante 
 </article></li>
 
 <li><article style="background-color:lightred;border-color:red">
-<p>Una cuerda de <span class="math inline">\(R=\)</span> 2 m de largo está fija en un extremo. En el extremo contrario hay una masa que describe círculos a velocidad constante, de modo que tarda 2 s en dar una vuelta completa. Describa la evolución temporal de la componente <span class="math inline">\(x\)</span> de su posición. Calcule el periodo, la frecuencia, la frecuencia angular y la amplitud del movimiento.</p>
+  <strong><p>Una cuerda de <span class="math inline">\(R= 2 \text{ m}\)</span> de largo está fija en un extremo. En el extremo contrario hay una masa que describe círculos a velocidad constante, de modo que tarda 2 s en dar una vuelta completa. Describa la evolución temporal de la componente <span class="math inline">\(x\)</span> de su posición. Calcule el periodo, la frecuencia, la frecuencia angular y la amplitud del movimiento.<br /></strong>
 
 <button id="e6" class="button"  onclick="show2('e6');">Solución</button>
 <div id="sol-e6" style="display:none;">
@@ -129,21 +130,23 @@ Si hacemos un pequeño esquema:</p>
 <div class="sbsimage">
     <div class="imgContainerEnd">
       <a data-fancybox="" href="figuras/prob1-circular.png">
-      <img alt="" src="figuras/prob1-circular.png" width="60%"/>
+      <img alt="" src="figuras/prob1-circular.png" width="30%"/>
     </a>
     </div>
 </div>
 
-<p>Vemos que en este movimiento, la proyección sobre el eje x será: <span class="math display">\[x(t)=R\cos\left(\varphi\right)\]</span> donde <span class="math inline">\(\varphi=\omega t\)</span>. Dado que tarda un tiempo <span class="math inline">\(T=\)</span> 2 s en dar una vuelta, es decir, en recorrer un ángulo de 2<span class="math inline">\(\pi\)</span>. Por tanto <span class="math display">\[\omega T=2\pi\]</span> de donde, <span class="math display">\[\omega=\frac{2\pi}{T}=\frac{2\pi}{2\mbox{ s}}=\pi\mbox{ rad/s}\]</span> De modo que la coordenada <span class="math inline">\(x\)</span> de este movimiento viene descrita por: <span class="math display">\[\boxed{x(t)=2\mbox{ m}\cos\left(\pi t\right)}\]</span> Periodo: Dado que tarda 2 s en realizar un ciclo completo, esto es justamente el periodo:<br />
+<p>Vemos que en este movimiento, la proyección sobre el eje x será: <span class="math display">\[x(t)=R\cos\left(\varphi\right)\]</span> donde <span class="math inline">\(\varphi=\omega t\)</span>. Dado que tarda un tiempo <span class="math inline">\(T=2\text{ s}\)</span> en dar una vuelta, es decir, en recorrer un ángulo de 2<span class="math inline">\(\pi\)</span>. Por tanto <span class="math display">\[\omega T=2\pi\]</span> de donde, <span class="math display">\[\omega=\frac{2\pi}{T}=\frac{2\pi}{2\mbox{ s}}=\pi\mbox{ rad/s}\]</span> De modo que la coordenada <span class="math inline">\(x\)</span> de este movimiento viene descrita por: <span class="math display">\[\boxed{x(t)=2\cos\left(\pi t\right)\mbox{ m}}\]</span> Periodo: Dado que tarda 2 s en realizar un ciclo completo, esto es justamente el periodo:<br />
 Frecuencia: <span class="math inline">\(f=1/T=1/2\mbox{ s}=\boxed{0.5\mbox{ Hz}}\)</span><br />
-Frecuencia angular:<span class="math inline">\(\omega=2\pi/T=\boxed{\pi\mbox{ rad/s}}\)</span>.<br />
+Frecuencia angular: <span class="math inline">\(\omega=2\pi/T=\boxed{\pi\mbox{ rad/s}}\)</span>.<br />
 Amplitud: El valor máximo de x(t) será la longitud de la cuerda: .</p>
 </div>
 </article></li>
 
 </ol>
 
-  <a href="oscilaciones_teoría.html">Volver a teoría</a>
+  <a href="oscilaciones_teoría.html">Volver a teoría</a><br><br>
+  <a href="https://cursos-0-fc-ugr.github.io/Fisica/">Volver a la página principal de Física</a>
+  <br><br>
 
 <script type="text/javascript" language="javascript">
   function show(str, obj){
