--- a/Fluidos/fluidos-2.html
+++ b/Fluidos/fluidos-2.html
@@ -17,11 +17,11 @@
     <h1 class="title">EJERCICIOS DE FUERZA Y PRESIÓN</h1>
   </div>
 
-  <br><br><br>
-
+ 
+  <a href="https://cursos-0-fc-ugr.github.io/Fisica/">Volver a la página principal de Física</a><br><br>
   <a href="fluidos_teoría.html">Volver a teoría</a>
 
-  <br><br>
+  
 
 <h2> PRESIÓN </h2>
 
@@ -29,12 +29,12 @@
 <li>
 
   <article style="background-color:lightred;border-color:red">
-  <p>En la siguiente figura, la fuerza es <span class="math inline">\(F=2\)</span> N. Calcular la presión ejercida sobre la superficie de 2 m<span class="math inline">\(^2\)</span> de área.</p>
+  <strong><p>En la siguiente figura, la fuerza es <span class="math inline">\(F=2\mbox{ N}\)</span>. Calcular la presión ejercida sobre la superficie de 2 m<span class="math inline">\(^2\)</span> de área.<br /></strong>
 
   <div class="sbsimage">
       <div class="imgContainerEnd">
         <a data-fancybox="" href="figuras/prob2-fuerza-presion.png">
-        <img alt="" src="figuras/prob2-fuerza-presion.png" width="40%"/>
+        <img alt="" src="figuras/prob2-fuerza-presion.png" width="25%"/>
       </a>
       </div>
   </div>
@@ -48,7 +48,7 @@ Primero hay que calcular la componente de la fuerza normal a la superficie, es d
 <center><table>
 <thead>
 <tr class="header">
-<th align="center"><span class="math inline">\(P=0,42Pa\)</span></th>
+<th align="center"><span class="math inline">\(P=0.42\mbox{ Pa}\)</span></th>
 </tr>
 </thead>
 </table></center>
@@ -58,13 +58,14 @@ Primero hay que calcular la componente de la fuerza normal a la superficie, es d
 
 <li>
 
-  <article style="background-color:lightred;border-color:red"><p>En la siguiente figura, el recipiente contiene un gas a presión <span class="math inline">\(P=2\)</span> atm. Calcular la fuerza <span class="math inline">\(F\)</span> necesaria para que el émbolo de 2 m<span class="math inline">\(^2\)</span> no se mueva.<br />
+  <article style="background-color:lightred;border-color:red">
+    <strong><p>En la siguiente figura, el recipiente contiene un gas a presión <span class="math inline">\(P=2\mbox{ atm}\)</span>. Calcular la fuerza <span class="math inline">\(F\)</span> necesaria para que el émbolo de 2 m<span class="math inline">\(^2\)</span> no se mueva.<br /></strong>
 </p>
 
 <div class="sbsimage">
     <div class="imgContainerEnd">
       <a data-fancybox="" href="figuras/prob2-fuerza-presion-2.png">
-      <img alt="" src="figuras/prob2-fuerza-presion-2.png" width="40%"/>
+      <img alt="" src="figuras/prob2-fuerza-presion-2.png" width="25%"/>
     </a>
     </div>
 </div>
@@ -76,19 +77,20 @@ En la siguiente figura se hace un esquema de fuerzas.</p>
 <div class="sbsimage">
     <div class="imgContainerEnd">
       <a data-fancybox="" href="figuras/prob2-fuerza-presion-2-sol.png">
-      <img alt="" src="figuras/prob2-fuerza-presion-2-sol.png" width="40%"/>
+      <img alt="" src="figuras/prob2-fuerza-presion-2-sol.png" width="25%"/>
     </a>
     </div>
 </div>
 
-<p>El gas encerrado en la cámara ejerce una fuerza de presión sobre la plataforma perpendicular hacia ella e igual a <span class="math inline">\(PS(-\hat{\imath})\)</span>. Para que esté en equilibrio, la componente normal de la fuerza aplicada debe compensar esta fuerza: <span class="math display">\[\vec{F}_n+PS(-\hat{\imath})=0\]</span> <span class="math display">\[F\cos\left(60^\circ\right)-PS=0\]</span> Por lo tanto, <span class="math display">\[F=\frac{PS}{\cos\left(60^\circ\right)}\]</span> Antes de operar, pasamos todas las magnitudes al mismo sistema de unidades: <span class="math display">\[P=2\mbox{ atm}=2\mbox{ atm}\times 101300\frac{\mbox{ Pa}}{\mbox{ atm}}=202600\mbox{ Pa}\]</span> <span class="math display">\[F=\frac{202600\mbox{ Pa}\times 2\mbox{ m}^2}{\cos\left(60^\circ\right)}=810.4\mbox{ kN}\]</span></p></article></li>
-<li><article style="background-color:lightred;border-color:red"><p>En la siguiente figura, el recipiente contiene un gas a presión <span class="math inline">\(P=2300\)</span> dinas/cm<span class="math inline">\(^2\)</span>. Calcular la fuerza <span class="math inline">\(F\)</span> en N necesaria para que la plataforma de 2 m<span class="math inline">\(^2\)</span> no se mueva.<br />
+<p>El gas encerrado en la cámara ejerce una fuerza de presión sobre la plataforma perpendicular hacia ella e igual a <span class="math inline">\(PS(-\hat{\imath})\)</span>. Para que esté en equilibrio, la componente normal de la fuerza aplicada debe compensar esta fuerza: <span class="math display">\[\vec{F}_n+PS(-\hat{\imath})=0\]</span> <span class="math display">\[F\cos\left(60^\circ\right)-PS=0\]</span> Por lo tanto, <span class="math display">\[F=\frac{PS}{\cos\left(60^\circ\right)}\]</span> Antes de operar, pasamos todas las magnitudes al mismo sistema de unidades: <span class="math display">\[P=2\mbox{ atm}=2\mbox{ atm}\cdot 101300\frac{\mbox{ Pa}}{\mbox{ atm}}=202600\mbox{ Pa}\]</span> <span class="math display">\[F=\frac{202600\mbox{ Pa}\cdot 2\mbox{ m}^2}{\cos\left(60^\circ\right)}=810.4\mbox{ kN}\]</span></p></article></li>
+<li><article style="background-color:lightred;border-color:red">
+  <strong><p>En la siguiente figura, el recipiente contiene un gas a presión <span class="math inline">\(P=2300\mbox{ dinas/cm}^2\)</span>. Calcular la fuerza <span class="math inline">\(F\)</span> en N necesaria para que la plataforma de 2 m<span class="math inline">\(^2\)</span> no se mueva.<br /></strong>
 </p>
 
 <div class="sbsimage">
     <div class="imgContainerEnd">
       <a data-fancybox="" href="figuras/prob2-fuerza-presion-3.png">
-      <img alt="" src="figuras/prob2-fuerza-presion-3.png" width="40%"/>
+      <img alt="" src="figuras/prob2-fuerza-presion-3.png" width="25%"/>
     </a>
     </div>
 </div>
@@ -102,19 +104,20 @@ En la siguiente figura se hace un esquema de fuerzas.</p>
 <div class="sbsimage">
     <div class="imgContainerEnd">
       <a data-fancybox="" href="figuras/prob2-fuerza-presion-3-sol.png">
-      <img alt="" src="figuras/prob2-fuerza-presion-3-sol.png" width="40%"/>
+      <img alt="" src="figuras/prob2-fuerza-presion-3-sol.png" width="25%"/>
     </a>
     </div>
 </div>
 
 <p>Para que esté en equilibrio, la componente normal de la fuerza aplicada debe compensar la fuerza de presión: <span class="math display">\[\vec{F}_n+PS(\hat{\jmath})=0\]</span> <span class="math display">\[-F\cos\left(20^\circ\right)+PS=0\]</span> Por lo tanto, <span class="math display">\[F=\frac{PS}{\cos\left(20^\circ\right)}=48.95\mbox{ kN}\]</span></p>
-<p>Antes de operar, pasamos todas las magnitudes al mismo sistema de unidades: <span class="math display">\[P=2300\mbox{ dinas/cm}^2=2300\mbox{ dinas/cm}^2\times\frac{1}{10\frac{\mbox{ dinas/cm}^2}{\mbox{ Pa}}}=230\mbox{ Pa}\]</span> <span class="math display">\[F=\frac{230\mbox{ Pa}\times 2\mbox{ m}^2}{\cos\left(20^\circ\right)}=490\mbox{ N}\]</span></p></article></li>
-<li><article style="background-color:lightred;border-color:red"><p>¿En la siguiente figura, ¿en qué dirección sale el fluido de la jeringa?</p>
+<p>Antes de operar, pasamos todas las magnitudes al mismo sistema de unidades: <span class="math display">\[P=2300\mbox{ dinas/cm}^2=2300\mbox{ dinas/cm}^2\cdot\frac{1}{10\frac{\mbox{ dinas/cm}^2}{\mbox{ Pa}}}=230\mbox{ Pa}\]</span> <span class="math display">\[F=\frac{230\mbox{ Pa}\cdot 2\mbox{ m}^2}{\cos\left(20^\circ\right)}=490\mbox{ N}\]</span></p></article></li>
+<li><article style="background-color:lightred;border-color:red">
+  <strong><p>¿En la siguiente figura, ¿en qué dirección sale el fluido de la jeringa?<br /></strong>
 
   <div class="sbsimage">
       <div class="imgContainerEnd">
         <a data-fancybox="" href="figuras/prob2-jeringa.png">
-        <img alt="" src="figuras/prob2-jeringa.png" width="40%"/>
+        <img alt="" src="figuras/prob2-jeringa.png" width="25%"/>
       </a>
       </div>
   </div>
@@ -130,12 +133,13 @@ El fluidos sale por los agujeros empujado por la fuerza de la presión. Esta es 
 <h2>PRESIÓN HIDROSTÁTICA</h2>
 
 
-<li><article style="background-color:lightred;border-color:red"><p>El tanque de la figura está lleno de agua y lleva adosado un tubo por el que asciende el fluido. La presión en B es 1500 Pa. a) Calcular la presión en el fondo. b) Calcular la presión en A.</p>
+<li><article style="background-color:lightred;border-color:red">
+  <strong><p>El tanque de la figura está lleno de agua y lleva adosado un tubo por el que asciende el fluido. La presión en B es 1500 Pa. a) Calcular la presión en el fondo. b) Calcular la presión en A.<br /></strong>
 
   <div class="sbsimage">
       <div class="imgContainerEnd">
         <a data-fancybox="" href="figuras/prob2-tanque-tubo-1.png">
-        <img alt="" src="figuras/prob2-tanque-tubo-1.png" width="40%"/>
+        <img alt="" src="figuras/prob2-tanque-tubo-1.png" width="25%"/>
       </a>
       </div>
   </div>
@@ -144,30 +148,32 @@ El fluidos sale por los agujeros empujado por la fuerza de la presión. Esta es 
   <div id="sol-e5" style="display:none;"><p>SOLUCIÓN: <br />
 </p>
 <ol type="a">
-<li><p>Por la ecuación de la hidrostática: <span class="math display">\[P_{fondo}=P_B+dgh\]</span> siendo <span class="math inline">\(h\)</span> la profundidad desde el punto B. Por lo tanto: <span class="math display">\[P=1500\mbox{ Pa}+1000\mbox{ kg/m}^3\times 9.8\mbox{ m/s}^2\times  0.25\mbox{ m}=3950\mbox{ Pa}\]</span></p></li>
+<li><p>Por la ecuación de la hidrostática: <span class="math display">\[P_{fondo}=P_B+dgh\]</span> siendo <span class="math inline">\(h\)</span> la profundidad desde el punto B. Por lo tanto: <span class="math display">\[P=1500\mbox{ Pa}+1000\mbox{ kg/m}^3\cdot 9.8\mbox{ m/s}^2\cdot  0.25\mbox{ m}=3950\mbox{ Pa}\]</span></p></li>
 <li><p>De nuevo aplicamos la ecuación de la hidrostática: <span class="math display">\[P_A=P_B+dgh\]</span> siendo <span class="math inline">\(h\)</span> la diferencia de altura entre ambos puntos.<br />
 ¡OJO! Fíjese en el orden. Siempre h es la profundidad desde el punto B, es decir, en esta ecuación, se calcula la presión de un punto B que está más profundo que otro punto A.<br />
-Por lo tanto: <span class="math display">\[P=1500\mbox{ Pa}+1000\mbox{ kg/m}^3\times 9.8\mbox{ m/s}^2\times (0.25-0.2)\mbox{ m}=1990\mbox{ Pa}\]</span></p></li>
+Por lo tanto: <span class="math display">\[P=1500\mbox{ Pa}+1000\mbox{ kg/m}^3\cdot 9.8\mbox{ m/s}^2\cdot (0.25-0.2)\mbox{ m}=1990\mbox{ Pa}\]</span></p></li>
 </ol ></article></li>
-<li><article style="background-color:lightred;border-color:red"><p>En el tanque de la figura, lleno de agua, la presión en el punto B es 1500 Pa. Calcular la presión en A.</p>
+<li><article style="background-color:lightred;border-color:red">
+  <strong><p>En el tanque de la figura, lleno de agua, la presión en el punto B es 1500 Pa. Calcular la presión en A.<br /></strong>
 
   <div class="sbsimage">
       <div class="imgContainerEnd">
         <a data-fancybox="" href="figuras/prob2-tanque-tubo-2.png">
-        <img alt="" src="figuras/prob2-tanque-tubo-2.png" width="40%"/>
+        <img alt="" src="figuras/prob2-tanque-tubo-2.png" width="25%"/>
       </a>
       </div>
   </div>
 
 <button id="e6" class="button"  onclick="show2('e6');">Solución</button>
   <div id="sol-e6" style="display:none;"><p>SOLUCIÓN: <br />
-Por la ecuación de la hidrostática: <span class="math display">\[P_B=P_A+dgh\]</span> Fíjese que ahora B está más profundo. Como queremos calcular la presión en A: <span class="math display">\[P_A=P_B-dgh\]</span> Por lo tanto: <span class="math display">\[P=1500\mbox{ Pa}-1000\mbox{ kg/m}^3\times 9.8\mbox{ m/s}^2\times (0.25-0.2)\mbox{ m}=1010\mbox{ Pa}\]</span></p></article></li>
-<li><article style="background-color:lightred;border-color:red"><p>El tubo de la figura está lleno de un aceite de densidad 0.65 g/ml. La presión en B es 28000 Pa. Calcular la presión en A.</p>
+Por la ecuación de la hidrostática: <span class="math display">\[P_B=P_A+dgh\]</span> Fíjese que ahora B está más profundo. Como queremos calcular la presión en A: <span class="math display">\[P_A=P_B-dgh\]</span> Por lo tanto: <span class="math display">\[P=1500\mbox{ Pa}-1000\mbox{ kg/m}^3\cdot 9.8\mbox{ m/s}^2\cdot (0.25-0.2)\mbox{ m}=1010\mbox{ Pa}\]</span></p></article></li>
+<li><article style="background-color:lightred;border-color:red">
+  <strong><p>El tubo de la figura está lleno de un aceite de densidad 0.65 g/ml. La presión en B es 28000 Pa. Calcular la presión en A.<br /></strong>
 
   <div class="sbsimage">
       <div class="imgContainerEnd">
         <a data-fancybox="" href="figuras/prob2-tubo-1.png">
-        <img alt="" src="figuras/prob2-tubo-1.png" width="40%"/>
+        <img alt="" src="figuras/prob2-tubo-1.png" width="30%"/>
       </a>
       </div>
   </div>
@@ -175,25 +181,26 @@ Por la ecuación de la hidrostática: <span class="math display">\[P_B=P_A+dgh\]
 <button id="e7" class="button"  onclick="show2('e7');">Solución</button>
   <div id="sol-e7" style="display:none;">
     <p>SOLUCIÓN: <br />
-Por la ecuación de la hidrostática: <span class="math display">\[P_A=P_B+dgh\]</span> Fíjese que hemos escogido un punto A en el borde del tubo. Sin embargo, aunque no tenga fluido justo encima, tiene fluido en los alrededores y por tanto ejerce presión sobre A. Para calcularlo, de nuevo da igual la posición, sólo hay que tener en cuenta la diferencia de altura. <span class="math display">\[P=28000\mbox{ Pa}+650\mbox{ kg/m}^3\times 9.8\mbox{ m/s}^2\times 0.1\mbox{ m}=28637\mbox{ Pa}\]</span></p></article></li>
-<li><article style="background-color:lightred;border-color:red"><p>El tubo de la figura está lleno de un aceite de densidad 0.65 g/ml. La presión en A es 1 atm. Calcular la presión en B.</p>
+Por la ecuación de la hidrostática: <span class="math display">\[P_A=P_B+dgh\]</span> Fíjese que hemos escogido un punto A en el borde del tubo. Sin embargo, aunque no tenga fluido justo encima, tiene fluido en los alrededores y por tanto ejerce presión sobre A. Para calcularlo, de nuevo da igual la posición, sólo hay que tener en cuenta la diferencia de altura. <span class="math display">\[P=28000\mbox{ Pa}+650\mbox{ kg/m}^3\cdot 9.8\mbox{ m/s}^2\cdot 0.1\mbox{ m}=28637\mbox{ Pa}\]</span></p></article></li>
+<li><article style="background-color:lightred;border-color:red">
+  <strong><p>El tubo de la figura está lleno de un aceite de densidad 0.65 g/ml. La presión en A es 1 atm. Calcular la presión en B.<br /></strong>
 
   <div class="sbsimage">
       <div class="imgContainerEnd">
         <a data-fancybox="" href="figuras/prob2-tubo-2.png">
-        <img alt="" src="figuras/prob2-tubo-2.png" width="40%"/>
+        <img alt="" src="figuras/prob2-tubo-2.png" width="25%"/>
       </a>
       </div>
   </div>
 
 <button id="e8" class="button"  onclick="show2('e8');">Solución</button>
   <div id="sol-e8" style="display:none;"><p>SOLUCIÓN: <br />
-Por la ecuación de la hidrostática: <span class="math display">\[P_A=P_B+dgh\]</span> Fíjese que da igual la forma del tubo y la posición dentro de él. Sólo hay que tener en cuenta la diferencia de altura. Como queremos calcular la presión en B: <span class="math display">\[P_B=P_A-dgh\]</span> Por lo tanto: <span class="math display">\[P=101300\mbox{ Pa}-650\mbox{ kg/m}^3\times 9.8\mbox{ m/s}^2\times (0.2-0.05)\mbox{ m}=100345\mbox{ Pa}\]</span></p></article></article></li>
+Por la ecuación de la hidrostática: <span class="math display">\[P_A=P_B+dgh\]</span> Fíjese que da igual la forma del tubo y la posición dentro de él. Sólo hay que tener en cuenta la diferencia de altura. Como queremos calcular la presión en B: <span class="math display">\[P_B=P_A-dgh\]</span> Por lo tanto: <span class="math display">\[P=101300\mbox{ Pa}-650\mbox{ kg/m}^3\cdot 9.8\mbox{ m/s}^2\cdot (0.2-0.05)\mbox{ m}=100345\mbox{ Pa}\]</span></p></article></article></li>
 </ol>
 
-<br><br><br>
 
-<a href="fluidos_teoría.html">Volver a teoría</a>
+<a href="fluidos_teoría.html">Volver a teoría</a><br><br>
+<a href="https://cursos-0-fc-ugr.github.io/Fisica/">Volver a la página principal de Física</a>
 
 <br><br>
 
